# chat2k8s

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/api/: wechat.py
app/core/: config.py  wechat_bot.py
app/llm/: agent.py  client.py  mcp_core.py  rag.py  utils.py
app/mcp/: client.py
app/wechat/: bot.py  crypto.py  handlers.py
doc_path/guide_doc/: guide.md
doc_path/guide_doc/reference/: dns.md
doc_path/rag_doc/: demo.md
kubeConfig/: config.yaml
scripts/: rag-init.py
