[project]
name = "chat2k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "cryptography>=46.0.5",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    "wechatpy>=1.8.18",
]
