[project]
name = "chat2k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "cryptography>=46.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    "wechatpy>=1.8.18",
    "langchain-milvus>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-classic>=1.0.1",
    "tiktoken>=0.12.0",
    "dnspython>=2.8.0",
    "pycryptodome>=3.23.0",
    "websockets>=16.0",
]
